--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "-": "0.0.1",
+    "bcrypt": "^5.0.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -27,6 +29,8 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^1.7.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
