--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
     "@types/express-validator": "^3.0.0",
     "@types/http-errors": "^1.8.0",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.3",
     "@types/sequelize": "^4.28.9",
     "@types/validator": "^13.1.0",
