--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "http-status-codes": "^2.1.2",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
@@ -39,6 +40,8 @@
     "@types/http-errors": "^1.8.0",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.3",
+    "@types/passport": "^1.0.4",
+    "@types/passport-local": "^1.0.33",
     "@types/sequelize": "^4.28.9",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
