Google OAuth Login

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,20 +4,23 @@
     "password": "my_password",
     "database": "starter_kit",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "test": {
     "username": "postgres",
     "password": "my_password",
     "database": "starter_kit",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "production": {
     "username": "postgres",
     "password": "my_password",
     "database": "starter_kit",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   }
 }
