--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node ./dist/bin/www",
     "cp-env": "cp -r .env ./dist",
     "cp-config": "cp -r ./src/config ./dist",
-    "clean": "rm -rf ./dist"
+    "clean": "rm -rf ./dist",
+    "clean-build": "npm run clean && npm run build"
   },
   "dependencies": {
     "-": "0.0.1",
@@ -24,6 +25,7 @@
     "http-status-codes": "^2.1.2",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
@@ -41,6 +43,7 @@
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.3",
     "@types/passport": "^1.0.4",
+    "@types/passport-google-oauth20": "^2.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/sequelize": "^4.28.9",
     "@types/validator": "^13.1.0",
