Config copy script updated

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc && npm run cp-env && npm run cp-config",
     "start": "node ./dist/bin/www",
     "cp-env": "cp -r .env ./dist",
-    "cp-config": "cp -r ./src/config ./dist",
+    "cp-config": "cp -r ./src/config/config.json ./dist/config/",
     "clean": "rm -rf ./dist",
     "clean-build": "npm run clean && npm run build"
   },
