--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "-": "0.0.1",
+    "@sentry/node": "^5.23.0",
     "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
@@ -34,6 +35,7 @@
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
+    "@sentry/types": "^5.23.0",
     "@types/bcrypt": "^3.0.0",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
