--- a/package.json
+++ b/package.json
@@ -1,38 +1,10 @@
 {
-  "name": "starter-kit",
-  "version": "0.0.0",
+  "name": "root",
   "private": true,
-  "scripts": {
-    "dev": "nodemon -e ts --exec ts-node ./src/bin/www",
-    "build": "tsc && npm run cp-env && npm run cp-config",
-    "start": "node ./dist/bin/www",
-    "cp-env": "cp -r .env ./dist",
-    "cp-config": "cp -r ./src/config/config.json ./dist/config/",
-    "clean": "rm -rf ./dist",
-    "clean-build": "npm run clean && npm run build"
-  },
-  "dependencies": {
-    "-": "0.0.1",
-    "@sentry/node": "^5.23.0",
-    "bcrypt": "^5.0.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^8.2.0",
-    "express": "~4.16.1",
-    "express-session": "^1.17.1",
-    "express-validator": "^6.6.1",
-    "http-errors": "~1.6.3",
-    "http-status-codes": "^2.1.2",
-    "morgan": "~1.9.1",
-    "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0",
-    "pg": "^8.3.3",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5",
-    "swagger-jsdoc": "^4.0.0",
-    "swagger-ui-express": "^4.1.4"
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-customizable"
+    }
   },
   "devDependencies": {
     "@sentry/types": "^5.23.0",
@@ -58,6 +30,7 @@
     "eslint": "^7.8.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "lerna": "^3.22.1",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
