--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express-session": "^1.17.0",
     "@types/express-validator": "^3.0.0",
     "@types/http-errors": "^1.8.0",
+    "@types/mocha": "^8.0.3",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.3",
     "@types/passport": "^1.0.4",
@@ -27,10 +28,12 @@
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "chai": "^4.2.0",
     "eslint": "^7.8.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "lerna": "^3.22.1",
+    "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
